--- a/public/index.html
+++ b/public/index.html
@@ -62,5 +62,6 @@
       <p>Created by <a href="https://github.com/lean-js/edu-toolchain">Micha Alt</a></p>
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
+    <script src="js/app.js"></script>
 	</body>
 </html>
