--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-framework="es6">
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Template • TodoMVC</title>
+		<title>EDU Toolchain • TodoMVC</title>
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
@@ -12,56 +11,34 @@
 				<h1>todos</h1>
 				<input class="new-todo" placeholder="What needs to be done?" autofocus>
 			</header>
-			<!-- This section should be hidden by default and shown when there are todos -->
-			<section class="main">
+			<section style="display:none" class="main">
 				<input id="toggle-all" class="toggle-all" type="checkbox">
 				<label for="toggle-all">Mark all as complete</label>
-				<ul class="todo-list">
-					<!-- These are here just to show the structure of the list items -->
-					<!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
-					<li class="completed">
-						<div class="view">
-							<input class="toggle" type="checkbox" checked>
-							<label>Taste JavaScript</label>
-							<button class="destroy"></button>
-						</div>
-						<input class="edit" value="Create a TodoMVC template">
-					</li>
-					<li>
-						<div class="view">
-							<input class="toggle" type="checkbox">
-							<label>Buy a unicorn</label>
-							<button class="destroy"></button>
-						</div>
-						<input class="edit" value="Rule the web">
-					</li>
-				</ul>
-			</section>
-			<!-- This footer should be hidden by default and shown when there are todos -->
-			<footer class="footer">
-				<!-- This should be `0 items left` by default -->
-				<span class="todo-count"><strong>0</strong> item left</span>
-				<!-- Remove this if you don't implement routing -->
-				<ul class="filters">
-					<li>
-						<a class="selected" href="#/">All</a>
-					</li>
-					<li>
+				<ul class="todo-list"></ul>
+				<footer class="footer">
+					<span class="todo-count"></span>
+					<ul class="filters">
+						<li>
+							<a href="#/" class="selected">All</a>
+						</li>
+						<li>
 						<a href="#/active">Active</a>
-					</li>
-					<li>
+						</li>
+						<li>
 						<a href="#/completed">Completed</a>
-					</li>
-				</ul>
-				<!-- Hidden if no completed items are left ↓ -->
-				<button class="clear-completed">Clear completed</button>
-			</footer>
+						</li>
+					</ul>
+					<button class="clear-completed">Clear completed</button>
+				</footer>
+			</section>
 		</section>
 		<footer class="info">
 			<p>Double-click to edit a todo</p>
-      <p>Created by <a href="https://github.com/lean-js/edu-toolchain">Micha Alt</a></p>
+			<p>Written by <a href="http://twitter.com/lukeed05">Luke Edwards</a></p>
+			<p>Refactored by <a href="https://github.com/xorgy">Aaron Muir Hamilton</a></p>
+			<p>Adapted by <a href="https://github.com/lean-js/edu-toolchain">Michael Alt</a></p>
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
-    <script src="js/app.js"></script>
+		<script type="module" src="js/app.js"></script>
 	</body>
 </html>
