--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Template • TodoMVC</title>
+		<title>Vanilla ES6 • TodoMVC</title>
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
@@ -13,7 +12,7 @@
 				<input class="new-todo" placeholder="What needs to be done?" autofocus>
 			</header>
 			<!-- This section should be hidden by default and shown when there are todos -->
-			<section class="main">
+			<section class="main" style="display: none;">
 				<input id="toggle-all" class="toggle-all" type="checkbox">
 				<label for="toggle-all">Mark all as complete</label>
 				<ul class="todo-list">
@@ -38,7 +37,7 @@
 				</ul>
 			</section>
 			<!-- This footer should be hidden by default and shown when there are todos -->
-			<footer class="footer">
+			<footer class="footer" style="display: none;">
 				<!-- This should be `0 items left` by default -->
 				<span class="todo-count"><strong>0</strong> item left</span>
 				<!-- Remove this if you don't implement routing -->
@@ -59,9 +58,11 @@
 		</section>
 		<footer class="info">
 			<p>Double-click to edit a todo</p>
-      <p>Created by <a href="https://github.com/lean-js/edu-toolchain">Micha Alt</a></p>
+			<p>Written by <a href="http://twitter.com/lukeed05">Luke Edwards</a></p>
+			<p>Refactored by <a href="https://github.com/xorgy">Aaron Muir Hamilton</a></p>
+			<p>Adapted by <a href="https://github.com/lean-js/edu-toolchain">Micha Alt</a></p>
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
-    <script src="js/app.js"></script>
+		<script type="module" src="js/app.js"></script>
 	</body>
 </html>
