--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Edu Toolchain</title>
   </head>
   <body>
-    <h1>todos</h1>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
